--- a/Admin/Admin.css
+++ b/Admin/Admin.css
@@ -1,6 +1,6 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     
 }
 .container-fluid{
@@ -9,7 +9,7 @@
  width: 100%;
  color:aliceblue;
  height: 100vh;
- margin: 0;
+ 
 }
 #UpDiv{
 background-color: #044B5B;
@@ -31,21 +31,23 @@ background-color: #044B5B;
     height: 141px; 
 }
 
-.col-md-3{
+.the-MiddleDiv{
     box-sizing: border-box;
-    color: black;
-}
-#BottomDiv{
-    margin-top: 60px;
-    /* margin-right: 0px;
-    width: 100%; */
+    width: 1440px;
     height: 250px;
     background-color: #F3ECEC;
+    color: black;
+}
+#BottomDiv h4{
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-bottom: 60px;
+    color: #0A208C;
 }
 .FormContainer{
     padding: 10px;
     margin-top: 30px;
-    background-color: #D3E9E9;
+    background-color: #ffffff;
     color: black;
     margin-left: 50px;
     width: 130px;
@@ -73,16 +75,26 @@ span{
 #header-title{
     margin-top: 25px;
 }
-
-#title-page{
-     margin-top: 20px;
-    margin-left: 40px;
-    margin-bottom: 60px;
-    color: #0A208C;
+#btn-fr{
+    margin-top: 10px;
+    margin-left: 30px;
+    float: left;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #044B5B;
+    color: white;
+    width: 90px;
 }
-#Table-span{
-    margin-left: 65px;
+#btn-ar{
+    margin-top: 10px;
+    margin-right: 30px;
+    float: right;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #044B5B;
+    color: white;
+    width: 90px;
 }
 #form-span{
-    margin-left: 40px;
+    margin-left: 60px;
 }
