--- a/Reclamation_formulaire/reclamation.css
+++ b/Reclamation_formulaire/reclamation.css
@@ -29,19 +29,18 @@
 
 /* Form Styling */
 form {
+    
     background-color: #D3E9E9;
     padding-top: 20px;
     padding-right: 20px;
     padding-left: 50px;
     border-radius: 15px;
-    /* box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); */
     max-width: 700px;
-    margin-left: 40px;
-    /* margin: 40px auto; */
-    /* display: flex;
-    flex-direction: column; */
+    margin: 40px auto 20px auto; /* ✅ centre horizontalement */
     gap: 25px; 
     color: black;
+    box-shadow: 0 0 8px #222;
+
 }
 
 form label {
@@ -150,7 +149,7 @@ form h2{
     border-radius: 10px;
     border: none;
     margin-top: 10px;
-    margin-right: 10px;
+    margin-right: 90px;
     font-size: 15px;
 }
 #btn-fr:hover{
@@ -172,4 +171,7 @@ cursor: pointer;
 #btn-ar:hover{
 background-color: rgb(46, 46, 46);
 cursor: pointer;
+}
+#header-title{
+    text-align: center;
 }
